--- a/style.css
+++ b/style.css
@@ -22,6 +22,11 @@ body {
   max-width: 1100px;
   margin: 0 auto;
   padding: 0 20px;
+  text-align: center;
+}
+
+.center {
+  text-align: center;
 }
 
 /* ====== HEADER ====== */
@@ -374,6 +379,10 @@ body {
 .order-form fieldset {
   border: none;
   margin-bottom: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: start;
 }
 
 .order-form legend {
